--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "rm -rf assets/images/ref && npm run build"
+  command = "rm -rf assets/images/ref/ && npm run build"
   publish = "dist"
